# caescript

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/: codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  license.yml  release.yml
examples/: fib.rs  hello.cae
src/: lib.rs  main.rs
src/ast/: mod.rs
src/code/: mod.rs
src/compiler/: mod.rs  scope.rs  symbol_table.rs
src/eval/: builtin.rs  env.rs  macros.rs  mod.rs  object.rs
src/lexer/: mod.rs
src/parser/: mod.rs  trace.rs
src/repl/: mod.rs
src/token/: mod.rs
src/vm/: frame.rs  mod.rs
