[package]
name = "caescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "caescript"
path = "src/bin/main.rs"

[dependencies]
byteorder = { version = "1", optional = true }
anyhow = { version = "1.0.71", optional = true}
num_enum = "0.6.1"

[features]
trace = []
vm = ["byteorder", "anyhow"]
