[package]
name = "caescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "caescript"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[dependencies]
byteorder = { version = "1", optional = true }
anyhow = { version = "1.0.71", optional = true }
strum = { version = "0.25", features = ["derive"] }
rustyline = { git="https://github.com/caelansar/rustyline.git", branch = "prompt4", optional = true }

[build-dependencies]
chrono = "0.4.31"

[features]
trace = []
vm = ["byteorder", "anyhow"]
build-binary = ["rustyline"]
